[package]
name = "model-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "model_loader"
crate-type = ["cdylib"]

[dependencies]
cudarc = "0.10.0"
indicatif = { version = "0.17.7", features = ["tokio"] }
num_cpus = "1.16.0"
pyo3 = "0.19.0"
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
